--- a/output/team.html
+++ b/output/team.html
@@ -25,17 +25,56 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">ricardo m</h2>
+        <h2 class="card-title">Ricardo Manosalvas</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:mano">mano</a></li>
+            <li class="list-group-item">Email: <a href="mailto:manosalvas2013@gmail.com">manosalvas2013@gmail.com</a></li>
             <li class="list-group-item">Office number: 1</li>
         </ul>
     </div>
+</div><div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Cullen Hunter</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:chunter@gmail.com">chunter@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/chunter" target="_blank" rel="noopener noreferrer">chunter</a></li>
+        </ul>
+    </div>
 </div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Lawrence K</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:LK@gmail.com">LK@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/lawrencek" target="_blank" rel="noopener noreferrer">lawrencek</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Gabe Perry</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:geeperry@gmail.com">geeperry@gmail.com</a></li>
+            <li class="list-group-item">School: NOVA CC</li>
+        </ul>
+    </div>
+</div>
+
             </div>
         </div>
     </div>
